--- a/WPB Test 1/assets/css/main.css
+++ b/WPB Test 1/assets/css/main.css
@@ -1608,7 +1608,8 @@ q
 
     .secondary-nav {
         display: none;
-        height: 100vh;
+        height: calc(100vh - 60px);
+        overflow-y: auto;
     }
 
     .secondary-nav>nav {
