--- a/WPB Test 1/assets/css/main.css
+++ b/WPB Test 1/assets/css/main.css
@@ -267,7 +267,9 @@ h3 {
     /* remove li padding */
 
 }
-
+.secondary-nav>nav>ul>li>ul.sub-menu > li{
+    position: relative;
+}
 .hero-section-prev,
 .hero-section-next {
     cursor: pointer;
@@ -335,7 +337,7 @@ ul.sub-sub-menu {
     box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.25);
     width: 200px;
     position: absolute;
-    top: 60%;
+    top:0;
     left: 100%;
     display: none;
     z-index: 999;
@@ -1714,6 +1716,9 @@ img.play-btn:hover {
     }
 .shoes-box{
       aspect-ratio: 4 / 3;
+}
+.secondary-nav>nav>ul>li>ul.sub-menu > li{
+    position: unset;
 }
 
     .secondary-nav>nav>ul>li>ul.sub-menu>li>a {
